# IoCContainer_net4_sharp5

./: CC  CMakeLists.txt  DefaultInstanceBuilder.cs  IInstanceBuilder.cs  IoCContainer_net4_sharp5.config  IoCContainer_net4_sharp5.csproj  IoCContainer_net4_sharp5.sln  LICENSE  README.TXT  Res.cs  ServiceCollection.cs  ServiceCollectionAssemblyBinding.cs  ServiceCollectionBinding.cs  ServiceCollectionScopedBinding.cs  ServiceCollectionSingletonBinding.cs  ServiceCollectionTransientBinding.cs  ServiceTreeNode.cs  TODO  gen_ExampleServiceAssemblyAsByteArray.sh  vcs_cosmetics
ExampleServiceAssembly/: CMakeLists.txt  ExampleServiceAssembly.csproj  Service.cs
ExampleServiceAssembly/Properties/: AssemblyInfo.cs
Examples/: CMakeLists.txt  Examples.csproj  Program.cs
Examples/Properties/: AssemblyInfo.cs
Properties/: AssemblyInfo.cs
Tests/: CMakeLists.txt  ExampleServiceAssemblyAsByteArray.cs  ServiceCollectionTest.cs  ServiceTreeNodeTest.cs  Tests.csproj
Tests/Properties/: AssemblyInfo.cs
diagrams/: BigPicture.dia
